# guile-rpc

./: .arch-inventory  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  configure.ac
benchmarks/: Makefile.am  benchmark.scm  record-marking.scm  xdr-decode.scm  xdr-encode.scm
build-aux/: .arch-inventory
debian/: changelog  control  copyright  info  rules
doc/: .arch-inventory  .gitignore  Makefile.am  guile-rpc.texi  portability.texi
modules/: Makefile.am
modules/rpc/: compiler.scm  rpc.scm  xdr.scm
modules/rpc/compiler/: .gitignore  lexer.l  parser.scm
modules/rpc/rpc/: portmap.scm  server.scm  transports.scm  types.scm
modules/rpc/xdr/: types.scm
modules/srfi/: srfi-64.upstream.scm
tests/: .arch-inventory  Makefile.am  compiler.test  parser.test  rpc.test  server-loop.test  xdr-encoding.test  xdr.test
utils/: .arch-inventory  .gitignore  Makefile.am  grpc-compile.in  grpc-nfs-export.in  grpc-rpcinfo.in
